--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -60,6 +60,22 @@
   year =                     2022
 }
 
+@InProceedings{froebe:2022d,
+  address =                  {Berlin Heidelberg New York},
+  author =                   {Maik Fr{\"o}be and Christopher Akiki and Martin Potthast and Matthias Hagen},
+  booktitle =                {Experimental {IR} Meets Multilinguality, Multimodality, and Interaction. 13th International Conference of the {CLEF} Association ({CLEF} 2022)},
+  doi =                      {10.1007/978-3-031-13643-6_4},
+  editor =                   {Alberto Barr{\'{o}}n{-}Cede{\~{n}}o and Giovanni {Da San Martino} and Mirko Degli Esposti and Fabrizio Sebastiani and Craig Macdonald and Gabriella Pasi and Allan Hanbury and Martin Potthast and Guglielmo Faggioli and Nicola Ferro},
+  ids =                      {potthast:2022p},
+  month =                    sep,
+  pages =                    {48--61},
+  publisher =                {Springer},
+  series =                   {Lecture Notes in Computer Science},
+  title =                    {Noise-Reduction for Automatically Transferred Relevance Judgments},
+  volume =                   13390,
+  year =                     2022
+}
+
 @InProceedings{gollub:2013a,
   author =                   {Tim Gollub and Matthias Hagen and Maximilian Michel and Benno Stein},
   booktitle =                {36th International ACM Conference on Research and Development in Information Retrieval (SIGIR 2013)},
