--- a/paper/ecir25-longeval.sty
+++ b/paper/ecir25-longeval.sty
@@ -21,6 +21,9 @@
 %\urlstyle{rm}
 %
 
+\usepackage{orcidlink}
+\renewcommand{\orcidID}[1]{\orcidlink{#1}}
+
 \newcommand{\Ni}{(1)~}
 \newcommand{\Nii}{(2)~}
 \newcommand{\Niii}{(3)~}
