--- a/paper/ecir25-longeval-part3.tex
+++ b/paper/ecir25-longeval-part3.tex
@@ -25,5 +25,5 @@ While this qrel boosting is highly effective when documents do not change~\cite{
 \paragraph{Previously Relevant Documents as Relevance Feedback.} Given a retrieval model, the current document corpus~$D$, and historical relevance feedback~$H$, we expand each query by adding $k$~terms with the highest tf-idf scores of previously known relevant documents. For a query $q$, the set $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ specifies the previously positive documents on which we calculate the tf-idf scores. The top $k$~terms with the highest tf-idf scores are obtained for query expansion and appended to the original query. The expanded query is submitted to the retrieval system on the current document corpus $D$ to produce the final ranking. Since this expansion relies solely on tf-idf scores from previous corpora, these scores can be calculated offline. Improving upon boosting, this allows to generalize from the historical relevance feedback to potentially deleted or newly created documents.
 
 
-\paragraph{Keyqueries for Previously Relevant Documents.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we construct keyqueries~\cite{froebe:2021c,gollub:2013a,hagen:2016b} against the previously relevant documents. A query $q_{k}$ is a keyquery for the set of target documents $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ previously known relevant for a query~$q$ against the corpus $D^{+} \cup D$ for the given retrieval model, iff \Ni every $d \in D^{+}$ is in the top-$k$ results, \Nii $q_{k}$ has more than $l$ results, and \Niii no subquery $q^{'}_{k} \subset q_{k}$ satisfies the above. The first criterion ensures the specificity, the second the generality, and the third the minimality of the keyquery, together trading off generalizability versus specificity. Traditional relevance feedback does not verify the position of feedback documents in the resulting rankings, whereas keyqueries uses them to remove overfitted or underfitted candidates. To generate candidates, we re-implemented a previous algorithm~\cite{froebe:2022c} in PyTerrier~\cite{macdonald:2020} which generates candidates from the top-10 RM3 terms. If multiple candidates are keyqueries, we use the one with the highest nDCG@10 on $D^{+}$. Finally, the keyquery is submitted against the corpus $D$, which may, or may not, contain the documents that were previously relevant.
+\paragraph{Keyqueries for Previously Relevant Documents.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we construct keyqueries~\cite{froebe:2021c,gollub:2013a,hagen:2016b} against the previously relevant documents. A query $q_{k}$ is a keyquery for the set of target documents $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ previously known relevant for a query~$q$ against the corpus $D^{+} \cup D$ for the given retrieval model, iff \Ni every $d \in D^{+}$ is in the top-$k$ results, \Nii $q_{k}$ has more than $l$ results, and \Niii no subquery $q^{'}_{k} \subset q_{k}$ satisfies the above. The first criterion ensures the specificity, the second the generality, and the third the minimality of the keyquery, together trading off generalizability versus specificity. Traditional relevance feedback does not verify the position of feedback documents in the resulting rankings, whereas keyqueries uses them to remove overfitted or underfitted candidates. To generate candidates, we re-implemented a previous algorithm~\cite{froebe:2022c} in PyTerrier~\cite{macdonald:2020} which generates candidates from the top-10 RM3 terms. If multiple candidates are keyqueries, we use the one with the highest nDCG@10 on $D^{+}$. Finally, the keyquery is submitted against the corpus $D$, which may, or may not, contain documents that were previously relevant.
 
