--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -7,4 +7,4 @@
 
 \paragraph{Query Rewriting with Keyqueries.} Given a set of target documents, a \emph{keyquery} is the minimal query that retrieves the target documents in the top positions~\cite{gollub:2013a,hagen:2016b}. We adapt this approach to the web search setting by using previously relevant documents as target documents. Keyqueries use terms generated via RM3 or other query expansion approaches as vocabulary for an efficient enumeration of query candidates~\cite{froebe:2022c,froebe:2021c}. Beyond other query expansion approaches, the keyquery approach also generates a ranking for each candidate to test if all criteria are fulfilled and thereby fully leveraging historical data. 
 
-\paragraph{Evaluations in Dynamic Settings.} Although temporal dynamics can strongly influence the effectiveness of IR systems, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Fr{\"o}be et al. studied the case when relevance judgments are re-used between different snapshots of crawled documents~\cite{froebe:2022d}. Recently, the LongEval shared task~\cite{alkhalifa:2023,DBLP:conf/clef/AlkhalifaBDEAFG24} provides a test bed of an evolving web search scenario covering over a year. Changes in evolving test collections are described through create, update, and delete operations on documents, topics, and relevance judgments~\cite{keller:2024}. While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
+\paragraph{Evaluations in Dynamic Settings.} Although temporal dynamics can strongly influence the effectiveness of IR systems, they are rarely  considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Fr{\"o}be et al.~\cite{froebe:2022d} studied the case when relevance judgments are re-used between different snapshots of crawled documents. Recently, the LongEval shared task~\cite{alkhalifa:2023,DBLP:conf/clef/AlkhalifaBDEAFG24} provides a test bed of an evolving web search scenario covering over a year. Changes in evolving test collections are described through create, update, and delete operations on documents, topics, and relevance judgments~\cite{keller:2024}. While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
