--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -76,6 +76,38 @@
   year =                     2022
 }
 
+@InProceedings{froebe:2023b,
+  address =                  {Berlin Heidelberg New York},
+  author =                   {Maik Fr{\"o}be and Matti Wiegmann and Nikolay Kolyada and Bastian Grahm and Theresa Elstner and Frank Loebe and Matthias Hagen and Benno Stein and Martin Potthast},
+  booktitle =                {Advances in Information Retrieval. 45th European Conference on {IR} Research ({ECIR} 2023)},
+  doi =                      {10.1007/978-3-031-28241-6_20},
+  editor =                   {Jaap Kamps and Lorraine Goeuriot and Fabio Crestani and Maria Maistro and Hideo Joho and Brian Davis and Cathal Gurrin and Udo Kruschwitz and Annalina Caputo},
+  ids =                      {potthast:2023h},
+  month =                    apr,
+  pages =                    {236--241},
+  publisher =                {Springer},
+  series =                   {Lecture Notes in Computer Science},
+  site =                     {Dublin, Irland},
+  title =                    {{Continuous Integration for Reproducible Shared Tasks with TIRA.io}},
+  year =                     2023
+}
+
+@InProceedings{froebe:2023e,
+  author =                   {Maik Fr{\"o}be and Jan Heinrich Reimer and Sean MacAvaney and Niklas Deckers and Simon Reich and Janek Bevendorff and Benno Stein and Matthias Hagen and Martin Potthast},
+  booktitle =                {46th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2023)},
+  doi =                      {10.1145/3539618.3591888},
+  editor =                   {Hsin-Hsi Chen and {Wei-Jou (Edward)} Duh and Hen-Hsen Huang and {Makoto P.} Kato and Josiane Mothe and Barbara Poblete},
+  ids =                      {potthast:2023t,merker:2023b},
+  isbn =                     {9781450394086},
+  month =                    jul,
+  numpages =                 11,
+  pages =                    {2826--2836},
+  publisher =                {ACM},
+  site =                     {Taipei, Taiwan},
+  title =                    {{The Information Retrieval Experiment Platform}},
+  year =                     2023
+}
+
 @InProceedings{gollub:2013a,
   author =                   {Tim Gollub and Matthias Hagen and Maximilian Michel and Benno Stein},
   booktitle =                {36th International ACM Conference on Research and Development in Information Retrieval (SIGIR 2013)},
