--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -3,13 +3,9 @@
 We evaluate our counterfactual query rewriting in the LongEval scenario that comes with overlapping queries across six points in time between June~2022 and August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. We modify the LongEval datasets to focus on queries that re-occur across multiple timestamps to study the effects of evolving documents. We evaluate the retrieval effectiveness of all approaches and use an ablation study to investigate if they generalize beyond previously known relevant documents.
 
 \subsection{Experimental Setup}
-The LongEval test collection~\cite{galuscakova:2023} samples documents, queries, and clicks from the French web search engine Qwant. For each timestamp, we remove queries that did not occur at least in one earlier timestamp, leaving 5~time\-stamps for evaluation between July~2022 and August~2023. %~(between 169~and 298~test queries; June~2022 is skipped as no previous logs are available).
-Figure~\ref{fig:query-overlap} overviews the overlapping queries for the timestamps. For instance, 138~queries from June~2023 re-occur in August~2024, forming the biggest time gap in our evaluation scenario.
+The LongEval test collection~\cite{galuscakova:2023} samples documents, queries, and clicks from the French web search engine Qwant. For each timestamp, we remove queries that did not occur at least in one earlier timestamp, leaving 5~time\-stamps for evaluation between July~2022 and August~2023. Figure~\ref{fig:query-overlap} overviews the overlapping queries for the timestamps. For instance, 138~queries from June~2023 re-occur in August~2024, forming the biggest time gap in our evaluation scenario.
 
-We contrast five baselines with our three approaches. We use BM25~\cite{robertson:1994}, BM25 with RM3 expansion (both implemented in PyTerrier~\cite{macdonald:2020}), ColBERT~\cite{khattab:2020}, List-in-T5~\cite{tamber:2023}, and monoT5~\cite{nogueira:2020}. We keep all the default hyperparameters for all baselines. We also implement our three approaches in PyTerrier using BM25 as the underlying retrieval model. For boosting (BM25$_{Boost}$), we set $\lambda=0.7$ and $\mu=2$ based on previous experiments~\cite{keller:2024b}. For relevance feedback (BM25$_{RF}$), $k=10$ feedback terms are used as this is also the default for RM3 in PyTerrier. For keyqueries (BM25$_{keyquery}$), we use 10~feedback terms aiming at queries that retrieve the target tocuments to the top-10 while having more than 25~results.
-
-%TODO: for camera ready: ColBERT, List-in-T5, and monoT5 baselines come from TIRA/TIREx
-
+We contrast five baselines with our three approaches. We use BM25~\cite{robertson:1994}, BM25 with RM3 expansion (implemented in PyTerrier~\cite{macdonald:2020}), ColBERT~\cite{khattab:2020}, List-in-T5~\cite{tamber:2023}, and monoT5~\cite{nogueira:2020}. We use the default hyperparameters for all baselines (exporting ColBERT, List-in-T5, and monoT5 from TIRA/TIREx~\cite{froebe:2023e,froebe:2023b}). We also implement our three approaches in PyTerrier using BM25 as the underlying retrieval model. For boosting (BM25$_{Boost}$), we set $\lambda=0.7$ and $\mu=2$ based on previous experiments~\cite{keller:2024b}. For relevance feedback (BM25$_{RF}$), $k=10$ feedback terms are used as this is also the default for RM3 in PyTerrier. For keyqueries (BM25$_{keyquery}$), we use 10~feedback terms aiming at queries that retrieve the target tocuments to the top-10 while having more than 25~results.
 
 \begin{figure}[t]
     \begin{minipage}{.49\textwidth}
