--- a/paper/ecir25-longeval-sum.tex
+++ b/paper/ecir25-longeval-sum.tex
@@ -1,15 +1,7 @@
 \section{Conclusion and Future Work}
 We explored the capabilities of query rewriting approaches for recurring queries. In our analysis, we counterfactually assume that documents previously deemed relevant are still available---even when they might have been deleted or updated---to incorporate them as explicit relevance feedback. 
 
-% Limitations
-The current analysis is subject to several limitations: currently it is restricted to a web search context, investigates a limited time frame, and relies on a single test collection. Moreover, comparing the approaches against systems that continuously learn from the evolving corpus could yield deeper insights. 
-% Domain
-The dynamics of the collection and the ways users interact with the search system strongly influences the effectiveness of the proposed approaches. As collections evolve for various reasons, previously relevant documents may no longer be available for further use. Expiring licenses may prevent the system from using the licensed documents, even if they are not ranked, whereas outdated or shutdown websites may still be available. Similarly, the query types users issue and how the system processes them may be differently well suited. For instance, while short keyword queries, as used in the experiments, may benefit from direct expansion, natural language queries should not be expanded in the same way.
-% Matthews effect
-While the results indicated improved effectiveness over the observed time frame, the approaches are essentially vulnerable to the Matthews effect, where older documents tend to accumulate exposure. Promoting older documents may create an increased entry barrier for new documents. Addressing such effects and biases over extended time frames is crucial for ensuring a secure and sustainably effective system. 
+The current analysis is subject to several limitations: currently it is restricted to a web search context, investigates a limited time frame, and relies on a single test collection. Moreover, comparing the approaches against systems that continuously learn from the evolving corpus could yield deeper insights. The dynamics of the collection and the ways users interact with the search system strongly influences the effectiveness of the proposed approaches. As collections evolve for various reasons, previously relevant documents may no longer be available for further use. Expiring licenses may prevent the system from using the licensed documents, even if they are not ranked, whereas outdated or shutdown websites may still be available. Similarly, the query types users issue and how the system processes them may be differently well suited. For instance, while short keyword queries, as used in the experiments, may benefit from direct expansion, natural language queries should not be expanded in the same way. While the results indicated improved effectiveness over the observed time frame, the approaches are essentially vulnerable to the Matthews effect, where older documents tend to accumulate exposure. Promoting older documents may create an increased entry barrier for new documents. Addressing such effects and biases over extended time frames is crucial for ensuring a secure and sustainably effective system. 
 
-% Conclusion
-Our approaches only need a few documents as feedback, and our results show that this already suffices to significantly outperform expensive transformer-based models. The ablation study suggests that the advanced approaches generalize beyond known query-document pairs, making them effective for new documents as well.
-% Future Work
-Interesting directions for future work would be also to handle scenarios where the intent of a query might change, take into account how the documents evolve, or how relevance feedback observed for similar queries can be re-used.
+Our approaches only need a few documents as feedback, and our results show that this already suffices to significantly outperform expensive transformer-based models. The ablation study suggests that the advanced approaches generalize beyond known query-document pairs, making them effective for new documents as well. Interesting directions for future work would be also to handle scenarios where the intent of a query might change, take into account how the documents evolve, or how relevance feedback observed for similar queries can be re-used.
 
