--- a/paper/ecir25-longeval-sum.tex
+++ b/paper/ecir25-longeval-sum.tex
@@ -1,5 +1,5 @@
 \section{Conclusion and Future Work}
-We explored the capabilities of query rewriting approaches for recurring queries. In our analysis, we counterfactually assume that documents previously deemed relevant are still available---even when they might have been deleted or updated---to incorporate them as explicit relevance feedback. 
+We explored the capabilities of query rewriting approaches for recurring queries. We counterfactually assume that previously relevant documents are still available to use them as explicit relevance feedback.  
 
 The current analysis is subject to several limitations: currently it is restricted to a web search context, investigates a limited time frame, and relies on a single test collection. Moreover, comparing the approaches against systems that continuously learn from the evolving corpus could yield deeper insights. The dynamics of the collection and the ways users interact with the search system strongly influences the effectiveness of the proposed approaches. As collections evolve for various reasons, previously relevant documents may no longer be available for further use. Expiring licenses may prevent the system from using the licensed documents, even if they are not ranked, whereas outdated or shutdown websites may still be available. Similarly, the query types users issue and how the system processes them may be differently well suited. For instance, while short keyword queries, as used in the experiments, may benefit from direct expansion, natural language queries should not be expanded in the same way. While the results indicated improved effectiveness over the observed time frame, the approaches are essentially vulnerable to the Matthews effect, where older documents tend to accumulate exposure. Promoting older documents may create an increased entry barrier for new documents. Addressing such effects and biases over extended time frames is crucial for ensuring a secure and sustainably effective system. 
 
