--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -12,8 +12,7 @@
   booktitle    = {Proceedings of the 2005 {ACM} {CIKM} International Conference on Information and Knowledge Management, Bremen, Germany, October 31 - November 5, 2005},
   pages        = {736--743},
   publisher    = {{ACM}},
-  year         = {2005},
-  url          = {https://doi.org/10.1145/1099554.1099733}
+  year         = {2005}
 }
 
 @book{chuklin:2015,
@@ -22,7 +21,6 @@
   series       = {Synthesis Lectures on Information Concepts, Retrieval, and Services},
   publisher    = {Morgan {\&} Claypool Publishers},
   year         = {2015},
-  url          = {https://doi.org/10.2200/S00654ED1V01Y201507ICR043},
   doi          = {10.2200/S00654ED1V01Y201507ICR043}
 }
 
@@ -164,7 +162,6 @@
   pages        = {3--13},
   publisher    = {{ACM}},
   year         = {2024},
-  url          = {https://doi.org/10.1145/3664190.3672530},
   doi          = {10.1145/3664190.3672530}
 }
 
@@ -176,7 +173,6 @@
   pages        = {3262--3271},
   publisher    = {{ACM}},
   year         = {2022},
-  url          = {https://doi.org/10.1145/3511808.3557068},
   doi          = {10.1145/3511808.3557068}
 }
 
@@ -185,7 +181,6 @@
   title        = {Learning to Rank for Information Retrieval},
   publisher    = {Springer},
   year         = {2011},
-  url          = {https://doi.org/10.1007/978-3-642-14267-3},
   doi          = {10.1007/978-3-642-14267-3},
   isbn         = {978-3-642-14266-6}
 }
@@ -245,10 +240,7 @@
   series = {{{CEUR}} Workshop Proceedings},
   volume = {3740},
   pages = {2396--2406},
-  publisher = {CEUR-WS.org},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  timestamp = {Wed, 21 Aug 2024 22:46:00 +0200},
-  file = {/Users/jueri/Zotero/storage/J8I7KZFT/Keller et al. - 2024 - Leveraging prior relevance signals in web search.pdf}
+  publisher = {CEUR-WS.org}
 }
 
 @inproceedings{macdonald:2020,
@@ -287,7 +279,6 @@
   pages        = {1--10},
   publisher    = {{ACM}},
   year         = {2009},
-  url          = {https://doi.org/10.1145/1526709.1526711},
   doi          = {10.1145/1526709.1526711}
 }
 
