--- a/paper/ecir25-longeval-part3.tex
+++ b/paper/ecir25-longeval-part3.tex
@@ -17,7 +17,7 @@ For a set $H$~of historical relevance feedback with observations $(q, d, t) \in 
 \end{equation}
     
     
-While this qrel boosting is highly effective when documents do not change~\cite{alkhalifa:2024,keller:2024b}, it cannot generalize to newly created or deleted documents.
+While this qrel boosting is highly effective if documents do not change~\cite{alkhalifa:2024,keller:2024b}, it cannot generalize to newly created or deleted documents.
 
 \paragraph{Previously Relevant Documents as Relevance Feedback.} Given a retrieval model, the current document corpus~$D$, and historical relevance feedback~$H$, we expand each query by adding $k$~terms with the highest tf-idf scores of previously known relevant documents. For a query $q$, the set $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ specifies the previously positive documents on which we calculate the tf-idf scores. The top $k$~terms with the highest tf-idf scores are obtained for query expansion and appended to the original query. The expanded query is submitted to the retrieval system on the current document corpus $D$ to produce the final ranking. Since this expansion relies solely on tf-idf scores from previous corpora, these scores can be calculated offline. Improving upon boosting, this allows to generalize from the historical relevance feedback to potentially deleted or newly created documents.
 
